feat: auth service
